# rowboat

./: .gitignore  README.md  pylintrc  pyproject.toml
rowboat/: __init__.py  __main__.py  config.py  trading.py
